# MathAssistant

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  run.py  server.yaml
docs/: agent-workflow.md  improvement-report.md
src/math_assistant/: agent.py  config.py  main.py  prompts.py
src/math_assistant/frontend/: __init__.py  agent_runner.py  app.py  auth_page.py  chat_page.py  question_classifier.py  save_manager.py  session_store.py  sidebar.py  styles.py
src/math_assistant/search_providers/: __init__.py  baidu.py  base.py  bocha.py  duckduckgo.py
src/math_assistant/server/: __init__.py  cli_client.py  config.py  database.py  dependencies.py  main.py
src/math_assistant/server/models/: __init__.py  answer_record.py  knowledge_point.py  learning_session.py  mastery.py  question.py  question_tag.py  user.py
src/math_assistant/server/routers/: __init__.py  analytics.py  auth.py  knowledge_points.py  questions.py
src/math_assistant/server/schemas/: __init__.py  analytics.py  auth.py  knowledge_point.py  question.py
src/math_assistant/server/services/: __init__.py  analytics_engine.py  auth_service.py  tagging_service.py  taxonomy_seed.py
src/math_assistant/session/: __init__.py  exporter.py  recorder.py
src/math_assistant/tools/: academic_search.py  image_to_text.py  python_executor.py  search.py
src/math_assistant/ui/: base.py  cli.py  renderer.py
src/math_assistant/vision_providers/: __init__.py  base.py  openai_vision.py
src/math_assistant/workspace/: __init__.py  index.py  manager.py
