[project]
name = "math-assistant"
version = "0.1.0"
description = "AI-powered mathematics teacher agent built with LangChain"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0",
    "langchain-openai>=1.0",
    "sympy>=1.12",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "duckduckgo-search>=7.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# Better terminal math display (LaTeX parsing + Unicode conversion)
math-render = ["pylatexenc>=2.0"]
# Enhanced terminal input (history search, autocomplete)
prompt-plus = ["prompt-toolkit>=3.0"]
# Backend server for user management, analytics, and question tagging
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "email-validator>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
